# minmodmon

./: .gitignore  Cargo.toml  Config.toml  README.md
.github/workflows/: windows.yml
crates/minmodmon-agent/: Cargo.toml
crates/minmodmon-agent/src/: active_model.rs  config.rs  lib.rs  manager.rs  sampler.rs  service.rs  types.rs
crates/minmodmon-dashboard/: Cargo.toml
crates/minmodmon-dashboard/src/: dashboard.html  lib.rs
crates/minmodmon-server/: Cargo.toml
crates/minmodmon-server/src/: cache.rs  config.rs  main.rs  model.rs  placeholder.rs  sampler.rs  types.rs
crates/minmodmon-server/src/agent/: manager.rs  mod.rs  service.rs
crates/minmodmon-server/src/api/: mod.rs
crates/minmodmon-server/src/dashboard/: dashboard.html  mod.rs
data/: dashboard.html  recursal-eaglex-chat-v05.toml  recursal-eaglex-v2-chat.toml  recursal-eaglex-v2.toml  rwkv-6-world-1b6.toml  rwkv-6-world-7b.toml  rwkv_vocab_v20230424.json
