[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
fastrand = "2.0.2"
half = "2.4.1"
itertools = "0.13.0"
memmap2 = "0.9.4"
safetensors = "0.4.3"
salvo = "0.67.0"
serde = "1.0.202"
tinytemplate = "1.2.1"
tokio = "1.37.0"
toml = "0.8.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
web-rwkv = "0.8.10"
wgpu = "0.20.0"
minmodmon-agent = { path = "./crates/minmodmon-agent" }
minmodmon-dashboard = { path = "./crates/minmodmon-dashboard" }
