[package]
name = "minmodmon-agent"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow.workspace = true
fastrand.workspace = true
half.workspace = true
itertools.workspace = true
memmap2.workspace = true
safetensors.workspace = true
salvo.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
web-rwkv = { workspace = true, features = ["runtime"] }
wgpu.workspace = true
