[package]
name = "minmodmon-agent"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
fastrand.workspace = true
half.workspace = true
itertools.workspace = true
memmap2.workspace = true
safetensors.workspace = true
salvo.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
web-rwkv = { workspace = true, features = ["runtime"] }
wgpu.workspace = true
