[package]
name = "minmodmon-dashboard"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
salvo = { workspace = true, features = ["anyhow"] }
serde = { workspace = true, features = ["derive"] }
tinytemplate.workspace = true
tracing.workspace = true
minmodmon-agent.workspace = true
