[package]
name = "minmodmon-server"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow.workspace = true
salvo = { workspace = true, features = ["affix", "anyhow", "logging"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
web-rwkv = { workspace = true, features = ["runtime"] }
minmodmon-agent.workspace = true
minmodmon-dashboard.workspace = true
