[package]
name = "minmodmon-server"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
salvo = { workspace = true, features = ["affix", "anyhow", "logging"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
web-rwkv = { workspace = true, features = ["runtime"] }
minmodmon-agent.workspace = true
minmodmon-dashboard.workspace = true
